--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -63,3 +63,11 @@ body {
     cursor: pointer;
   }
 }
+
+.users-show-page {
+  .user-info {
+    .thumbnail {
+      margin-bottom: 0px;
+    }
+  }
+}
