--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -84,6 +84,13 @@ body {
       margin-bottom: 0px;
     }
   }
+  .meta {
+    font-size: .9em;
+    color: #b3b3b3;
+  }
+  .reply-content {
+    margin: 6px 0;
+  }
 
   .nav-tabs {
     margin-bottom: 20px;
@@ -137,5 +144,21 @@ body {
       border: 0;
       border-top: 1px solid #dcebf5;
     }
+  }
+}
+
+.topic-reply {
+  hr {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+
+  a {
+    color: inherit;
+  }
+
+  .meta {
+    font-size: .9em;
+    color: #b3b3b3;
   }
 }
