--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -117,7 +117,7 @@ body {
   }
 }
 
-.topics-index-page, .categories-show-page {
+.topics-index-page, .categories-show-page, .root-page {
   .topic-list {
     .nav > li > a {
       position: relative;
